--- a/client/src/components/DeleteBtn/DeleteBtn.css
+++ b/client/src/components/DeleteBtn/DeleteBtn.css
@@ -1,4 +1,11 @@
 .delete-btn {
   float: right;
   color: #e74944;
+  font-size: 26px;
+  font-weight: bold;
+  margin-top: -8px;
+}
+
+.delete-btn:hover {
+  cursor: pointer;
 }
